<resources>
  <string name="app_name">RecRead</string>
  <string name="label_from">From</string>
  <string name="label_app_name">Recread</string>
  <string name="label_or">Or</string>
  <string name="app_error_required_field">Required field</string>

  <!-- Login -->
  <string name="login_hint_username">Username</string>
  <string name="login_hint_password">Password</string>
  <string name="login_button">Login</string>
  <string name="login_create_account">Create Account</string>
  <string name="login_reset_password">Reset Password</string>

  <!-- Register -->
  <string name="register_hint_confirm_password">Confirm Password</string>
  <string name="register_button">Register</string>

  <!-- Home -->
  <string name="home_popular_topics">Popular Topics</string>
  <string name="home_view_all">View all</string>
  <string name="home_fiction">Fiksi</string>
  <string name="home_non_fiction">Nonfiksi </string>
  <string name="home_categories">Categories</string>
  <string name="home_romance">Romance</string>
  <string name="home_fantasy">Fantasy</string>
  <string name="home_horror">Horror</string>
  <string name="home_science">Science Fiction</string>

  <!-- Menu Bottom Navigation -->
  <string name="menu_home">Home</string>
  <string name="menu_article">Article</string>
  <string name="menu_saved">Saved</string>
  <string name="menu_profile">Profile</string>
  <string name="menu_search">Search</string>
  <string name="menu_add">Add</string>

  <!-- Article -->
  <string name="article_hint_search">Search Novel</string>
  <string name="article_author_name">by %1$s</string>
  <string name="article_rating">avg rating %1$s - %2$d ratings - published %3$s</string>
  <string name="article_not_found">Articles not found!</string>

  <!-- profile -->
  <string name="profile_logout">Logout</string>

</resources>