<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/text_language"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="English"
    app:layout_constraintBottom_toBottomOf="@+id/image_language"
    app:layout_constraintEnd_toStartOf="@+id/image_language"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/image_language" />

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/image_language"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_padding_xxs"
    android:layout_marginTop="@dimen/margin_padding_l"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/text_language"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_down"
    app:tint="@color/black" />

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/image_logo"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_marginTop="@dimen/margin_padding_xxl"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_language"
    app:srcCompat="@drawable/ic_logo" />

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/button_login_google"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/image_logo"
    app:srcCompat="@drawable/ic_button_login_google" />

  <LinearLayout
    android:id="@+id/layout_divider"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_padding_l"
    android:layout_marginTop="@dimen/margin_padding_l"
    android:layout_marginEnd="@dimen/margin_padding_l"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button_login_google">

    <View
      android:id="@+id/divider_start"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_weight="2"
      android:background="@color/black" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/label_or" />

    <View
      android:id="@+id/divider_end"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_weight="2"
      android:background="@color/black" />
  </LinearLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_layout_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_padding_l"
    android:layout_marginTop="@dimen/margin_padding_l"
    android:layout_marginEnd="@dimen/margin_padding_l"
    android:hint="@string/login_hint_username"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/layout_divider">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_text_username"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_layout_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_padding_l"
    android:layout_marginTop="@dimen/margin_padding_xxs"
    android:layout_marginEnd="@dimen/margin_padding_l"
    android:hint="@string/login_hint_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/input_layout_username">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_text_password"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="textPassword" />

  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_padding_l"
    android:layout_marginTop="@dimen/margin_padding_l"
    android:layout_marginEnd="@dimen/margin_padding_l"
    android:background="@drawable/background_button_login"
    android:text="@string/login_button"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

  <LinearLayout
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_padding_l"
    android:layout_marginTop="@dimen/margin_padding_l"
    android:layout_marginEnd="@dimen/margin_padding_l"
    android:gravity="center"
    android:orientation="horizontal"
    app:layout_constraintBottom_toTopOf="@+id/text_from"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button_login"
    app:layout_constraintVertical_bias="0">

    <TextView
      android:id="@+id/text_create_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_padding_m"
      android:layout_weight="2"
      android:gravity="end"
      android:text="@string/login_create_account"
      android:textColor="@color/blue" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/label_or" />

    <TextView
      android:id="@+id/text_reset_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_padding_m"
      android:layout_weight="2"
      android:text="@string/login_reset_password"
      android:textColor="@color/blue" />
  </LinearLayout>

  <TextView
    android:id="@+id/text_from"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:gravity="center"
    android:text="@string/label_from"
    app:layout_constraintBottom_toTopOf="@+id/text_app_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/text_app_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_padding_l"
    android:layout_weight="2"
    android:gravity="center"
    android:text="@string/label_app_name"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>