<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_label_popular_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_l"
        android:layout_marginTop="@dimen/margin_padding_l"
        android:text="@string/home_popular_topics"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_all_popular_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_l"
        android:layout_marginEnd="@dimen/margin_padding_l"
        android:text="@string/home_view_all"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/text_label_popular_topics"
        app:layout_constraintEnd_toEndOf="parent" />

      <androidx.cardview.widget.CardView
        android:id="@+id/card_fiction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_l"
        android:layout_marginTop="@dimen/margin_padding_l"
        android:layout_marginEnd="@dimen/margin_padding_xs"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toStartOf="@+id/card_non_fiction"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_popular_topics">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="@dimen/margin_padding_s">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_fiction" />

          <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_fiction"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginTop="@dimen/margin_padding_xs"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/image_fiction" />

        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/card_non_fiction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_xs"
        android:layout_marginTop="@dimen/margin_padding_l"
        android:layout_marginEnd="@dimen/margin_padding_l"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_fiction"
        app:layout_constraintTop_toBottomOf="@+id/text_label_popular_topics">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="@dimen/margin_padding_s">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_non_fiction" />

          <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_non_fiction"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginTop="@dimen/margin_padding_xs"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/image_non_fiction" />

        </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_label_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_l"
        android:layout_marginTop="@dimen/margin_padding_l"
        android:text="@string/home_categories"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_non_fiction" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_all_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_l"
        android:layout_marginEnd="@dimen/margin_padding_l"
        android:text="@string/home_view_all"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/text_label_categories"
        app:layout_constraintEnd_toEndOf="parent" />

      <LinearLayout
        android:id="@+id/button_category_romance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_l"
        android:layout_marginTop="@dimen/margin_padding_l"
        android:layout_marginEnd="@dimen/margin_padding_l"
        android:background="@drawable/background_button_category"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_categories">

        <View
          android:layout_width="2dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="@dimen/margin_padding_l"
          android:background="@color/green" />

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_padding_l"
          app:srcCompat="@drawable/ic_romance"
          app:tint="@color/pink" />

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home_romance" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/button_category_fantasy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_l"
        android:layout_marginTop="@dimen/margin_padding_xs"
        android:layout_marginEnd="@dimen/margin_padding_l"
        android:background="@drawable/background_button_category"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_category_romance">

        <View
          android:layout_width="2dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="@dimen/margin_padding_l"
          android:background="@color/yellow" />

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_padding_l"
          app:srcCompat="@drawable/ic_fantasy"
          app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home_fantasy" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/button_category_horror"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_l"
        android:layout_marginTop="@dimen/margin_padding_xs"
        android:layout_marginEnd="@dimen/margin_padding_l"
        android:background="@drawable/background_button_category"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_category_fantasy">

        <View
          android:layout_width="2dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="@dimen/margin_padding_l"
          android:background="@color/blue" />

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_padding_l"
          app:srcCompat="@drawable/ic_horror"
          app:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home_horror" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/button_category_science"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_l"
        android:layout_marginTop="@dimen/margin_padding_xs"
        android:layout_marginEnd="@dimen/margin_padding_l"
        android:background="@drawable/background_button_category"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_category_horror">

        <View
          android:layout_width="2dp"
          android:layout_height="match_parent"
          android:layout_marginEnd="@dimen/margin_padding_l"
          android:background="@color/purple" />

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_padding_l"
          app:srcCompat="@drawable/ic_science"
          app:tint="@color/blue" />

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home_science" />

      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>